<resources>
    <string name="app_name">NoteApp</string>
    <string name="my_note">Công việc của tôi</string>
    <string name="done">Done</string>
    <string name="search">Tìm công việc</string>
    <string name="add_note">Thêm công việc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="title">Tiêu đề</string>
    <string name="sub_text">Phân loại</string>
    <string name="enter_note">Nhập nội dung</string>
    <string name="dateTime">Thời hạn: </string>
    <string name="more">more</string>
    <string name="delete_notes">Đưa vào thùng rác</string>
    <string name="done_note">Công việc đã hoàn thành</string>
    <string name="delete_note">Công việc đã xóa</string>
    <string name="home">Home</string>
    <string name="note_delete">Công việc đã xóa</string>
    <string name="mark_as_complete">Đánh dấu là đã hoàn thành</string>
    <string name="remove_note">Xóa công việc</string>
    <string name="complete_note">Công việc đã hoàn thành</string>
    <string name="restore_note">Khôi phục công việc đã xóa</string>
    <string name="mark_not_complete_note">Đánh dấu là chưa hoàn thành</string>
    <string name="sort_by_title">Sắp xếp theo tiêu đề</string>
    <string name="sort_by_date_time">Sắp xếp theo thời hạn</string>
    <string name="close">close</string>
    <string name="normal">Bình thường</string>
    <string name="prioritized">Ưu tiên</string>
    <string name="super_prioritized">Cực kỳ khẩn cấp</string>
    <string name="emergency">Khẩn cấp</string>
    <string name="choose_option">Tùy chọn</string>
</resources>