<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/choose_option"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/done"
            android:src="@drawable/ic_close"
            app:tint="@color/ColorWhite" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">
        <!--   Nên     -->
        <FrameLayout
            android:id="@+id/flNoteColorOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="0dp">

            <View
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/note_color_6" />

            <ImageView
                android:id="@+id/ivNoteColorOrange"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/done"
                android:layout_gravity="center_vertical|start"
                app:tint="@color/ColorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/_28sdp"
                android:text="@string/super_prioritized"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/_14sdp" />
        </FrameLayout>
        <!-- Nên -->
        <FrameLayout
            android:id="@+id/flNoteColorYellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="0dp">

            <View
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/note_color_2" />

            <ImageView
                android:id="@+id/ivNoteColorYellow"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/done"
                app:tint="@color/ColorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/_28sdp"
                android:text="@string/emergency"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/_14sdp" />
        </FrameLayout>
        <!--   Nên     -->
        <FrameLayout
            android:id="@+id/flNoteColorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="0dp">

            <View
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/note_color_5" />

            <ImageView
                android:id="@+id/ivNoteColorGreen"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/done"
                app:tint="@color/ColorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/_28sdp"
                android:text="@string/prioritized"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/_14sdp" />
        </FrameLayout>
        <!--   Nên     -->
        <FrameLayout
            android:id="@+id/flNoteColorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="0dp">

            <View
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/note_color_7" />

            <ImageView
                android:id="@+id/ivNoteColorBlack"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/done"
                app:tint="@color/ColorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/_28sdp"
                android:text="@string/normal"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/_14sdp" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:text="@string/delete_notes"
        android:textColor="@color/ColorWhite"
        app:drawableStartCompat="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutColor" />

    <TextView
        android:id="@+id/tvRestoreNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:text="@string/restore_note"
        android:textColor="@color/ColorWhite"
        app:drawableStartCompat="@drawable/ic_restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteNote" />

    <TextView
        android:id="@+id/tvCompleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:text="@string/mark_as_complete"
        android:textColor="@color/ColorWhite"
        app:drawableStartCompat="@drawable/ic_done_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRestoreNote" />

    <TextView
        android:id="@+id/tvRemoveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:text="@string/remove_note"
        android:textColor="@color/ColorWhite"
        app:drawableStartCompat="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCompleteNote" />

    <TextView
        android:id="@+id/tvNotCompleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:padding="@dimen/_4sdp"
        android:text="@string/mark_not_complete_note"
        android:textColor="@color/ColorWhite"
        app:drawableStartCompat="@drawable/ic_restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRemoveNote" />


</androidx.constraintlayout.widget.ConstraintLayout>