<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:padding="@dimen/_5sdp"
    app:cardBackgroundColor="@color/ColorLightBlack"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_5sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="0dp"
            android:text="@string/title"
            android:textColor="@color/ColorWhite"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/enter_note"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/dateTime"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/_9sdp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>